Fix some IO issues and tests